--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "~4.14.1",
     "express-session": "^1.17.1",
     "hbs": "~4.0.1",
+    "mongoose": "^5.10.8",
     "morgan": "~1.7.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
